# hci_HIEinfer

./: CMakeLists.txt  README.md  build.sh  infer.cpp  set_env.sh
data/: ILSVRC2012_img_val
include/: common.h  iimageengine.h  stringutil.h
third_party_libs/: libHIE.so.4  libHIE.so.4.1.1
