CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)
PROJECT(imageengine LANGUAGES CXX)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CUDA_VERBOSE_BUILD ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_COMPILER g++)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -DNDEBUG -fopenmp -mavx2 -mfma")

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/include
        )
LINK_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}/third_party_libs
        )

SET(3RDPARTY_LIBS imageengine)
ADD_EXECUTABLE(infer infer.cpp)
TARGET_LINK_LIBRARIES(infer imageengine)
